Add collapsable arrow

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                         <ul>
                             <li style="margin-bottom:4px;">
                             <b>Roadmap-explorer: A fast and reliable robot exploration module</b><br>
-                            <u>Suchetan Saravanan</u><br>
+                            <!-- <u>Suchetan Saravanan</u><br> -->
                             <em>ROSCon</em>, 2025 (Singapore).
                             [<a href="https://vimeo.com/1136177427?autoplay=1" target="_blank">Video</a>]
                             [<a href="https://github.com/suchetanrs/roadmap-explorer" target="_blank">Repo</a>]
@@ -274,7 +274,7 @@
                             
                             <li style="margin-bottom:4px;">
                             <b>ROS 2 CMV: A custom message visualizer for RViz</b><br>
-                            <u>Suchetan Saravanan</u><br>
+                            <!-- <u>Suchetan Saravanan</u><br> -->
                             <em>ROSCon</em>, 2025 (Singapore) — Lightning talk.
                             [<a href="https://vimeo.com/1136158488?autoplay=1#t=313.485" target="_blank">Video</a>]
                             [<a href="https://github.com/suchetanrs/ros2_cmv" target="_blank">Repo</a>]
@@ -282,7 +282,7 @@
 
                             <li style="margin-bottom:4px;">
                             <b>Full-fledged ROS 2 Wrapper for ORB-SLAM3</b><br>
-                            <u>Suchetan Saravanan</u><br>
+                            <!-- <u>Suchetan Saravanan</u><br> -->
                             <em>ROSCon</em>, 2024 (Denmark) — Lightning talk.
                             [<a href="https://vimeo.com/1026038503?autoplay=1#t=120.84" target="_blank">Video</a>]
                             [<a href="https://github.com/suchetanrs/traversability_mapping" target="_blank">Repo</a>]
@@ -290,7 +290,7 @@
                         
                             <li style="margin-bottom:4px;">
                             <b>Lightweight global traversability mapping with any graph-based SLAM on ROS 2</b><br>
-                            <u>Suchetan Saravanan</u><br>
+                            <!-- <u>Suchetan Saravanan</u><br> -->
                             <em>ROSCon India</em>, 2024.
                             [<a href="https://www.youtube.com/watch?v=NwRpIqSCuk4" target="_blank">Video</a>]
                             [<a href="https://github.com/suchetanrs/ORB-SLAM3-ROS2-Docker" target="_blank">Repo</a>]
@@ -403,51 +403,6 @@
                         </td>
                     </tr>
 
-                    <!-- Open-Source Robotics: ORB-SLAM3, Traversability, ROS 2 CMV, Roadmap-explorer -->
-                    <tr>
-                        <td style="padding:25px;width:25%;vertical-align:middle">
-                            <!-- <div class="one">
-                                <img src="images/ros2_logo.png" width="160" alt="ROS 2 / Open-source logo">
-                            </div> -->
-                        </td>
-                        <td style="padding:10px;width:75%;vertical-align:top">
-                            <papertitle style="color:gray"><big>Author &amp; Maintainer</big></papertitle>
-                            <papertitle><big> | Open-Source Robotics Projects</big></papertitle>
-                            <br>
-                            Jan '24 – Present, Remote
-                            <br>
-                            <br>
-                            <p>
-                                I maintain several <b>ROS 2</b> packages that target large-scale autonomy stacks:
-                            </p>
-                            <ul>
-                                <li>
-                                    <b>ORB-SLAM3 ROS&nbsp;2 Wrapper</b>: a widely adopted wrapper and Dockerized distribution with build scripts,
-                                    launch files, configuration presets, and utilities for global mapping, atlas management, and robust switching
-                                    between odometry and SLAM. (~300+ GitHub stars)
-                                </li>
-                                <li>
-                                    <b>Global Traversability Mapping Library</b>: a high-performance C++ engine for building global/local
-                                    traversability maps from 3D point clouds, computing real-time risk estimates, and integrating with any
-                                    SLAM backend and Nav2. (~100+ GitHub stars)
-                                </li>
-                                <li>
-                                    <b>ROS&nbsp;2 CMV</b>: a custom message visualizer that auto-generates RViz displays for arbitrary custom
-                                    interfaces, integrating with ROS Babel Fish for runtime visualization.
-                                </li>
-                                <li>
-                                    <b>Roadmap-explorer</b>: a customizable exploration framework for ROS&nbsp;2 UGVs that augments classical
-                                    frontier exploration with an adaptive navigation roadmap and bounded TSP tour planning, achieving
-                                    25–45% lower exploration time than strong baselines in unstructured outdoor environments.
-                                </li>
-                            </ul>
-                            <p>
-                                These tools have been presented and demonstrated at <b>ROSCon 2024</b>, <b>ROSCon 2025</b>, and <b>ROSCon India 2024</b>,
-                                and are actively used by the community. :contentReference[oaicite:8]{index=8}
-                            </p>
-                        </td>
-                    </tr>
-
                     <!-- Project Kratos: Rover Manipulation Lead -->
                     <tr>
                         <td style="padding:25px;width:25%;vertical-align:middle">
@@ -473,29 +428,6 @@
                                 object recognition, enabling autonomous typing and switch-actuation behaviors at competitions such as the
                                 <b>University Rover Challenge</b> and the <b>Anatolian Rover Challenge</b>, where our team ranked among the top
                                 globally. :contentReference[oaicite:9]{index=9}
-                            </p>
-                        </td>
-                    </tr>
-
-                    <!-- Outreach and Teaching -->
-                    <tr>
-                        <td style="padding:25px;width:25%;vertical-align:middle">
-                            <!-- <div class="one">
-                                <img src="images/outreach_logo.png" width="160" alt="Outreach and teaching logo">
-                            </div> -->
-                        </td>
-                        <td style="padding:10px;width:75%;vertical-align:top">
-                            <papertitle style="color:gray"><big>Volunteer &amp; Mentor</big></papertitle>
-                            <papertitle><big> | Teaching &amp; Outreach</big></papertitle>
-                            <br>
-                            Ongoing
-                            <br>
-                            <br>
-                            <p>
-                                I have volunteered with organizations such as <b>Nirmaan NGO</b> and <b>Abhigyaan NGO</b> to teach mathematics,
-                                physics, and basic robotics to underprivileged students and pre-university cohorts. I also regularly mentor
-                                student teams in embedded systems and robotics, helping them build foundational skills and navigate early
-                                research projects. :contentReference[oaicite:10]{index=10}
                             </p>
                         </td>
                     </tr>
@@ -599,6 +531,41 @@
   window.addEventListener('load', setNewsHeight);
   window.addEventListener('resize', setNewsHeight);
 })();
+</script>
+
+<script>
+// Keep the arrow state (CSS based on aria-expanded) in sync with Bootstrap 3 collapse.
+$(function () {
+  function getTargetSelector($btn) {
+    return $btn.attr('data-target') || $btn.attr('href');
+  }
+
+  function syncBtnState($btn) {
+    var targetSel = getTargetSelector($btn);
+    if (!targetSel) return;
+    var $target = $(targetSel);
+    if (!$target.length) return;
+
+    var isOpen = $target.hasClass('in'); // Bootstrap 3 uses `.in` for shown collapses.
+    if ($target.attr('id')) $btn.attr('aria-controls', $target.attr('id'));
+    $btn.attr('aria-expanded', isOpen ? 'true' : 'false');
+  }
+
+  // Set initial arrow state on page load.
+  $('.collapsible[data-toggle="collapse"]').each(function () {
+    syncBtnState($(this));
+  });
+
+  // Update arrow state when any collapse is shown/hidden.
+  $(document).on('shown.bs.collapse hidden.bs.collapse', '.collapse', function (e) {
+    var id = this.id;
+    if (!id) return;
+    var isShown = e.type === 'shown';
+    $('.collapsible[data-toggle="collapse"][data-target="#' + id + '"], .collapsible[data-toggle="collapse"][href="#' + id + '"]')
+      .attr('aria-expanded', isShown ? 'true' : 'false')
+      .attr('aria-controls', id);
+  });
+});
 </script>
 </body>
 
