--- a/index.html
+++ b/index.html
@@ -317,19 +317,17 @@
                     
                     <!-- Clutterbot: Robot Software Engineer -->
                     <tr>
-                        <td style="padding:25px;width:25%;vertical-align:middle">
+                        <td class="experience-logo-cell" style="width:25%;vertical-align:middle">
                             <div class="one">
-                                <img src="images/clutterbot.svg" width="160" alt="Clutterbot logo">
+                                <img src="images/clutterbot.svg" width="160" height="20" alt="Clutterbot logo">
                             </div>
                         </td>
-                        <td style="padding:10px;width:75%;vertical-align:top">
-                            <papertitle style="color:gray"><big>Robot Software Engineer</big></papertitle>
-                            <papertitle><big> | <a href="https://www.clutterbot.com/" target="_blank">Clutterbot</a></big></papertitle>
-                            <br>
-                            Jul '24 – Present, Bangalore, India
-                            <br>
-                            <br>
-                            <p>
+                        <td class="experience-content-cell" style="width:75%;vertical-align:top">
+                            <div class="experience-header">
+                                <span class="experience-role">Robot Software Engineer</span><span class="experience-sep">|</span><span class="experience-org">Clutterbot</span>
+                            </div>
+                            <div class="experience-meta">Jul '24 – Present, Bangalore, India</div>
+                            <!-- <p>
                                 I own the navigation software stack for Clutterbot’s consumer robots, delivering a scalable framework with
                                 <b>runtime-swappable planners and controllers</b>, rich telemetry, and robust failure handling. I led the design of a
                                 <b>behavior tree-based navigation handler</b> with a recovery action server for context-aware error recovery and
@@ -341,25 +339,23 @@
                                 depth imagery with LiDAR for dynamic global re-planning in cluttered environments, and a <b>multi-objective
                                 approach-pose estimator</b> that jointly optimizes object scale, traversability, manipulation effort, and clutter for
                                 robust pre-grasp pose selection. :contentReference[oaicite:5]{index=5}
-                            </p>
+                            </p> -->
                         </td>
                     </tr>
 
                     <!-- ISAE-SUPAERO: NaviR2eS Research Team -->
                     <tr>
-                        <td style="padding:25px;width:25%;vertical-align:middle">
+                        <td class="experience-logo-cell" style="width:25%;vertical-align:middle">
                             <div class="one">
                                 <img src="images/isae.png" width="160" alt="ISAE-SUPAERO logo">
                             </div>
                         </td>
-                        <td style="padding:10px;width:75%;vertical-align:top">
-                            <papertitle style="color:gray"><big>Research Collaborator</big></papertitle>
-                            <papertitle><big> | NaviR2eS, ISAE-SUPAERO</big></papertitle>
-                            <br>
-                            Jan '24 – Present, Toulouse, France (Remote)
-                            <br>
-                            <br>
-                            <p>
+                        <td class="experience-content-cell" style="width:75%;vertical-align:top">
+                            <div class="experience-header">
+                                <span class="experience-role">Research Collaborator</span><span class="experience-sep">|</span><span class="experience-org">NaviR2eS, ISAE-SUPAERO</span>
+                            </div>
+                            <div class="experience-meta">Jan '24 – Present, Toulouse, France (Remote)</div>
+                            <!-- <p>
                                 I collaborate with the <b>NaviR2eS research team</b> on information- and traversability-aware exploration for unmanned
                                 ground vehicles. I led the development of <b>FIT-SLAM 2</b>, an active exploration framework with a novel adaptive
                                 roadmap, TSP-based goal scheduling, and real-time Fisher information computation, achieving a <b>34% higher
@@ -370,25 +366,23 @@
                                 environments, resulting in a <b>10% reduction in traversal time</b> and a <b>44% improvement in safety</b>. This work builds
                                 on my bachelor’s thesis, <b>FIT-SLAM</b>, which combines Fisher information-based utility with traversability mapping
                                 for exploration in 3D environments. 
-                            </p>
+                            </p> -->
                         </td>
                     </tr>
 
                     <!-- BITS Pilani: Undergraduate Researcher / Thesis -->
                     <tr>
-                        <td style="padding:25px;width:25%;vertical-align:middle">
+                        <td class="experience-logo-cell" style="width:25%;vertical-align:middle">
                             <div class="one">
                                 <img src="images/BITSPilani_logo.png" width="160" alt="BITS Pilani logo">
                             </div>
                         </td>
-                        <td style="padding:10px;width:75%;vertical-align:top">
-                            <papertitle style="color:gray"><big>Undergraduate Researcher</big></papertitle>
-                            <papertitle><big> | BITS Pilani &amp; ISAE-SUPAERO</big></papertitle>
-                            <br>
-                            Jul '23 – Dec '23, Bachelor’s Thesis
-                            <br>
-                            <br>
-                            <p>
+                        <td class="experience-content-cell" style="width:75%;vertical-align:top">
+                            <div class="experience-header">
+                                <span class="experience-role">Undergraduate Researcher</span><span class="experience-sep">|</span><span class="experience-org">BITS Pilani &amp; ISAE-SUPAERO</span>
+                            </div>
+                            <div class="experience-meta">Jul '23 – Dec '23, Bachelor’s Thesis</div>
+                            <!-- <p>
                                 For my thesis, titled <b>“Fisher information and traversability-estimation-based active SLAM for exploration in 3D
                                 environments”</b>, I conducted an extensive survey of active SLAM and exploration methods, identifying gaps in
                                 information-, localization-, and traversability-aware exploration. I then architected and implemented <b>FIT-SLAM</b>,
@@ -399,25 +393,23 @@
                                 This work led to multiple first-author contributions, including <b>FIT-SLAM</b> (ICARA 2024), <b>FIT-SLAM 2</b> (Robotics
                                 and Autonomous Systems, 2025), and <b>traversability-aware planning with dynamic speed profiling for planetary
                                 exploration</b> (<a class="link-venue" href="https://www.isparo.space/">iSpaRo 2025</a>). 
-                            </p>
+                            </p> -->
                         </td>
                     </tr>
 
                     <!-- Project Kratos: Rover Manipulation Lead -->
                     <tr>
-                        <td style="padding:25px;width:25%;vertical-align:middle">
+                        <td class="experience-logo-cell" style="width:25%;vertical-align:middle">
                             <div class="one">
                                 <img src="images/kratoslogo.png" width="160" alt="Project Kratos logo">
                             </div>
                         </td>
-                        <td style="padding:10px;width:75%;vertical-align:top">
-                            <papertitle style="color:gray"><big>Manipulation Subsystem Lead</big></papertitle>
-                            <papertitle><big> | <a href="https://kratos-the-rover.github.io/" target="_blank">Project Kratos, BITS Pilani</a></big></papertitle>
-                            <br>
-                            May '21 – May '23
-                            <br>
-                            <br>
-                            <p>
+                        <td class="experience-content-cell" style="width:75%;vertical-align:top">
+                            <div class="experience-header">
+                                <span class="experience-role">Manipulation Subsystem Lead</span><span class="experience-sep">|</span><span class="experience-org">Project Kratos, BITS Pilani</span>
+                            </div>
+                            <div class="experience-meta">May '21 – May '23</div>
+                            <!-- <p>
                                 I led the <b>manipulation subsystem</b> for Project Kratos, BITS Pilani’s Mars rover team, focusing on reliable
                                 end-effector control and perception for field robotics competitions. I designed a <b>closed-loop feedback control
                                 system</b> with a high-level perception and fault-recovery module, enabling robust trajectory tracking on a 5-DoF
@@ -428,7 +420,7 @@
                                 object recognition, enabling autonomous typing and switch-actuation behaviors at competitions such as the
                                 <b>University Rover Challenge</b> and the <b>Anatolian Rover Challenge</b>, where our team ranked among the top
                                 globally. :contentReference[oaicite:9]{index=9}
-                            </p>
+                            </p> -->
                         </td>
                     </tr>
 
