--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <link rel="icon" type="image/png" href="images/HS.png" >
 </head>
 <body class="bg_colour">
+    <button id="themeToggle" class="theme-toggle" type="button" aria-label="Toggle dark mode" aria-pressed="false">Dark</button>
     <table border=0 class="bg_colour" style="width:100%;max-width:1400px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
         <tr style="padding:0px">
             <td style="padding:0px">
@@ -319,7 +320,8 @@
                     <tr>
                         <td class="experience-logo-cell" style="width:25%;vertical-align:middle">
                             <div class="one">
-                                <img src="images/clutterbot.svg" width="160" height="20" alt="Clutterbot logo">
+                                <img class="theme-logo-light" src="images/clutterbot.png" width="160" height="20" alt="Clutterbot logo">
+                                <img class="theme-logo-dark" src="images/clutterbot_dark.png" width="160" height="20" alt="Clutterbot logo (dark)">
                             </div>
                         </td>
                         <td class="experience-content-cell" style="width:75%;vertical-align:top">
@@ -347,7 +349,8 @@
                     <tr>
                         <td class="experience-logo-cell" style="width:25%;vertical-align:middle">
                             <div class="one">
-                                <img src="images/isae.png" width="160" alt="ISAE-SUPAERO logo">
+                                <img class="theme-logo-light" src="images/isae.png" width="160" alt="ISAE-SUPAERO logo">
+                                <img class="theme-logo-dark" src="images/isae_dark.png" width="160" alt="ISAE-SUPAERO logo (dark)">
                             </div>
                         </td>
                         <td class="experience-content-cell" style="width:75%;vertical-align:top">
@@ -428,15 +431,15 @@
                 </div>
                 <hr class="soft">
         
-        <p style="text-align:center; margin-top:10px;">
+        <!-- <p style="text-align:center; margin-top:10px;">
             <a class="btn btn-primary" style="font-size:14px;" href="pixel_robot_navigator.html" target="_blank" rel="noopener">
                 Launch Pixel Robot Navigator
             </a>
-        </p>
+        </p> -->
         <tr>
             <td>
                 <p><em>
-                    This template is a modification of Jon Barron's <a href="https://jonbarron.info/" target="_blank">website</a>. Last Updated: December 11 2025.
+                    This template is a modification of Jon Barron's <a href="https://jonbarron.info/" target="_blank">website</a>.
                 </em>
                 </p>
             </td>
@@ -558,6 +561,49 @@ $(function () {
       .attr('aria-controls', id);
   });
 });
+</script>
+
+<script>
+(function () {
+  var KEY = 'theme';
+  var btn = document.getElementById('themeToggle');
+  var body = document.body;
+  if (!btn || !body) return;
+
+  function apply(isDark) {
+    body.classList.toggle('dark-mode', !!isDark);
+    btn.setAttribute('aria-pressed', isDark ? 'true' : 'false');
+    btn.textContent = isDark ? 'Light' : 'Dark';
+  }
+
+  function getSaved() {
+    try { return window.localStorage.getItem(KEY); } catch (e) { return null; }
+  }
+
+  function save(val) {
+    try { window.localStorage.setItem(KEY, val); } catch (e) {}
+  }
+
+  var saved = getSaved();
+  if (saved === 'dark') {
+    apply(true);
+  } else if (saved === 'light') {
+    apply(false);
+  } else {
+    // Default: follow system preference if available
+    var prefersDark = false;
+    try {
+      prefersDark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
+    } catch (e) {}
+    apply(prefersDark);
+  }
+
+  btn.addEventListener('click', function () {
+    var isDarkNow = !body.classList.contains('dark-mode');
+    apply(isDarkNow);
+    save(isDarkNow ? 'dark' : 'light');
+  });
+})();
 </script>
 </body>
 
