--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 
     <title>Suchetan Saravanan</title>
     
+
+    <!-- IMPORTANT!!!!!! -->
+    <!-- If you fork this website for your own use, please remove this section. -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q71FTBHFGY"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
@@ -12,6 +15,8 @@
 
     gtag('config', 'G-Q71FTBHFGY');
     </script>
+    <!-- IMPORTANT!!!!!! -->
+    <!-- If you fork this website for your own use, please remove this section. -->
 
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -440,6 +445,7 @@
             <td>
                 <p><em>
                     This template is a modification of Jon Barron's <a href="https://jonbarron.info/" target="_blank">website</a>.
+                    <br> <b>IMPORTANT: </b>If you fork this website for your own use, please remove the analytics tracking code from index.html
                 </em>
                 </p>
             </td>
