--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 </head>
 <body class="bg_colour">
     <button id="themeToggle" class="theme-toggle" type="button" aria-label="Toggle dark mode" aria-pressed="false">Dark</button>
+    <button id="backToTop" class="back-to-top" type="button" aria-label="Back to top" title="Back to top">
+      ↑
+    </button>
     <table border=0 class="bg_colour" style="width:100%;max-width:1400px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
         <tr style="padding:0px">
             <td style="padding:0px">
@@ -605,6 +608,48 @@ $(function () {
     apply(isDarkNow);
     save(isDarkNow ? 'dark' : 'light');
   });
+})();
+</script>
+
+<script>
+(function () {
+  var btn = document.getElementById('backToTop');
+  if (!btn) return;
+
+  var SHOW_AFTER_PX = 350;
+
+  function shouldReduceMotion() {
+    try {
+      return window.matchMedia && window.matchMedia('(prefers-reduced-motion: reduce)').matches;
+    } catch (e) {
+      return false;
+    }
+  }
+
+  function setVisible(isVisible) {
+    btn.classList.toggle('is-visible', !!isVisible);
+    btn.setAttribute('aria-hidden', isVisible ? 'false' : 'true');
+    btn.tabIndex = isVisible ? 0 : -1;
+  }
+
+  function onScroll() {
+    var y = window.pageYOffset || document.documentElement.scrollTop || 0;
+    setVisible(y > SHOW_AFTER_PX);
+  }
+
+  btn.addEventListener('click', function () {
+    var behavior = shouldReduceMotion() ? 'auto' : 'smooth';
+    try {
+      window.scrollTo({ top: 0, behavior: behavior });
+    } catch (e) {
+      // Fallback for older browsers
+      window.scrollTo(0, 0);
+    }
+  });
+
+  window.addEventListener('scroll', onScroll, { passive: true });
+  window.addEventListener('load', onScroll);
+  onScroll();
 })();
 </script>
 </body>
