Fix website links

--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
                                 Research Collaborator, NaviR2eS Team at <a href="https://www.isae-supaero.fr/en/electronics-optronics-and-signal-processing-department/navigation-radar-and-remonte-sensing-scientific-group/" target="_blank">ISAE-SUPAERO</a>
                             </p>
                             <p style="text-align:center">
-                                I am a robotics researcher and engineer interested in <b>active SLAM</b>, <b>uncertainty-aware and risk-aware exploration</b>, and
-                                <b>semantic scene understanding</b> for object search and robot autonomy in unseen, unstructured environments.
+                                I am a robotics researcher and engineer interested in <b>semantic scene understanding </b>, <b>zero-shot object navigation</b>, <b>active SLAM</b> and <b>uncertainty-aware and risk-aware exploration</b> for robust robot autonomy in unseen, unstructured environments.
                             </p>
                         </td>
                     </tr>
@@ -306,6 +305,29 @@
                             </li>
                         </ul>
 
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+                </div>
+                <hr class="soft">
+
+
+
+                <!-- Open-source -->
+
+                <button style="border:0px transparent; background-color: transparent;outline:none;" type="button" class="collapsible" data-toggle="collapse" data-target="#content-open-source" id="projects"><heading>Open-source</heading></button>
+                <div id="content-open-source" class="collapse in">
+
+                <table border=0 class="bg_colour" style="padding:20px;width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+                    <tbody>
+                    <tr>
+                        <td style="padding:10px;width:100%;vertical-align:top">
+                        <p style="margin:0;">
+                          <b>TODO</b>: I’m curating highlights here — for now, please visit my
+                          <a href="https://github.com/suchetanrs" target="_blank" rel="noopener noreferrer">GitHub profile</a>
+                          to view my open-source contributions.
+                        </p>
                         </td>
                     </tr>
                     </tbody>
